Medium severity sonarcloud fixes
* Made lists in VerifyOperationResultDto unmodifiable
* Replaced RuntimeExceptions with IllegalStateExceptions
* Replaced Stream#peek with Stream#foreach
* Removed duplicate switch cases
* Refactored else-blocks that only contained an if
* Used format specifiers instead of string concatenation in logging
* Removed unused arguments from:
** InsertPruneLoadTest#prune
** OktaTokenAuthenticator#performUserSearch
** TestFactory#createDemoInstance
** MinionUpdateTest -> all methods

Request:None
Change-Id: I53b6126e46e33205f4e89d8b8dc898594d82376a